--- a/htmlpages/home.html
+++ b/htmlpages/home.html
@@ -1,2 +1,42 @@
 <!-- First Block -->
 
+<section class='row home'>
+  <div class='wrapper'>
+    <div class='block-inner'>
+      <div class='block'>
+        <h2>Price packages</h2>
+      </div>
+      <div class='block'>
+        <h2>Testimonials</h2>
+      </div>
+      <div class='block'>
+        <h2>Gallery</h2>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Second Block -->
+
+<section class='row about'>
+  <div class='wrapper'>
+    <h3 class="heading1">About</h3>
+    <div class='text-wrapper'>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatem ratione itaque harum delectus repellat exercitationem accusamus ullam distinctio quam provident possimus deserunt saepe fugiat doloremque quisquam quo, deleniti fuga.</p>
+    </div>
+  </div>
+</section>
+
+<!-- Third Block -->
+
+<section class='row mantra'>
+  <div class='wrapper'>
+    <h3 class='heading1'>Training Ethos</h3>
+    <div class='content-inner'>
+      <div class='img-wrapper'>
+        <img class='img-responsive' src='https://placehold.co/600x400' alt='image' />
+      </div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus laboriosam praesentium exercitationem sint atque, cum beatae, ad cumque at expedita qui, veritatis dolorem molestiae. Illo, possimus nostrum. Culpa, molestiae explicabo.</p>
+    </div>
+  </div>
+</section>
