--- a/htmlpages/home.html
+++ b/htmlpages/home.html
@@ -3,13 +3,13 @@
 <section class='row home'>
   <div class='wrapper'>
     <div class='block-inner'>
-      <div class='block'>
+      <div class='block price'>
         <h2>Price packages</h2>
       </div>
-      <div class='block'>
+      <div class='block testimonials'>
         <h2>Testimonials</h2>
       </div>
-      <div class='block'>
+      <div class='block gallery'>
         <h2>Gallery</h2>
       </div>
     </div>
