--- a/htmlpages/home.html
+++ b/htmlpages/home.html
@@ -4,13 +4,19 @@
   <div class='wrapper'>
     <div class='block-inner'>
       <div class='block price'>
-        <h2>Price packages</h2>
+        <a href='#'>
+          <h2>Price packages</h2>
+        </a>
       </div>
       <div class='block testimonials'>
-        <h2>Testimonials</h2>
+        <a href='#'>
+          <h2>Testimonials</h2>
+        </a>
       </div>
       <div class='block gallery'>
-        <h2>Gallery</h2>
+        <a href='#'>
+          <h2>Gallery</h2>
+        </a>
       </div>
     </div>
   </div>
