--- a/htmlpages/pricepackages.html
+++ b/htmlpages/pricepackages.html
@@ -1,59 +1,62 @@
-<!-- First block -->
-
-<section class='row'>
-  <div class='wrapper'>
-    <div class='price-package'>
-      <div class='heading3'>
+<section class="row">
+  <div class="wrapper">
+    <div class="price-package">
+      <div class="heading3">
         <h2>Training price plans <span>to help you reach your fitness goals</span></h2>
       </div>
-      <div class='price-package-wrapper'>
-        <div class='price-package-card'>
-          <h3 class='heading3'>Single Session</h3>
-          <div class='price'>&pound;0</div>
-          <ul class='plan'>
-            <li class='plan-item'>Item 1</li>
-            <li class='plan-item'>Item 2</li>
-            <li class='plan-item'>Item 3</li>
-          </ul>
-          <div class='btn'>
-            Find out more
+      <div class="price-package-wrapper">
+        <div class="price-package-card">
+          <h3 class="heading3">Single</h3>
+          <div class='price-details'>
+            <div class="price">&pound;50</div>
           </div>
+          <ul class="plan">
+            <li class="plan-item">Up to 90 minutes</li>
+            <li class="plan-item">Training advice</li>
+            <li class="plan-item">Technical advice</li>
+            <li class="plan-item">Form corrections</li>
+          </ul>
+          <div class="btn">Find out more</div>
         </div>
-        <div class='price-package-card'>
-          <h3 class='heading3'>6 Packs</h3>
-          <div class='price'>&pound;0</div>
-          <ul class='plan'>
-              <li class='plan-item'>Item 1</li>
-              <li class='plan-item'>Item 2</li>
-              <li class='plan-item'>Item 3</li>
+        <div class="price-package-card">
+          <h3 class="heading3">6 Packs</h3>
+          <div class='price-details'>
+            <div class="price">&pound;270</div>
+            <small>&pound;45 per session</small>
+          </div>
+          <ul class="plan">
+              <li class="plan-item">Introduction to training</li>
+              <li class="plan-item">Ideal for program setting</li>
+              <li class="plan-item">24 hour support</li>
+              <li class="plan-item">Bespoke training programs</li>
             </ul>
-            <div class='btn'>
-              Find out more
-            </div>
+            <div class="btn">Find out more</div>
         </div>
-        <div class='price-package-card'>
-          <h3 class='heading3'>10 Packs</h3>
-          <div class='price'>&pound;0</div>
-          <ul class='plan'>
-              <li class='plan-item'>Item 1</li>
-              <li class='plan-item'>Item 2</li>
-              <li class='plan-item'>Item 3</li>
+        <div class="price-package-card">
+          <h3 class="heading3">10 Packs</h3>
+          <div class='price-details'>
+            <div class="price">&pound;400</div>
+            <small>&pound;40 per session</small>
+          </div>
+          <ul class="plan">
+              <li class="plan-item">Introduction to training</li>
+              <li class="plan-item">Bespoke training programs</li>
+              <li class="plan-item">Continual guidence through training program</li>
             </ul>
-            <div class='btn'>
-              Find out more
-            </div>
+            <div class="btn">Find out more</div>
         </div>
-        <div class='price-package-card'>
-          <h3 class='heading3'>15 Packs</h3>
-          <div class='price'>&pound;0</div>
-          <ul class='plan'>
-              <li class='plan-item'>Item 1</li>
-              <li class='plan-item'>Item 2</li>
-              <li class='plan-item'>Item 3</li>
-            </ul>
-            <div class='btn'>
-              Find out more
-            </div>
+        <div class="price-package-card">
+          <h3 class="heading3">15 Packs</h3>
+          <div class='price-details'>
+            <div class="price">&pound;525</div>
+            <small>&pound;35 per session</small>
+          </div>
+          <ul class="plan">
+            <li class="plan-item">Introduction to training</li>
+            <li class="plan-item">Bespoke training programs</li>
+            <li class="plan-item">Continual guidence through training program</li>
+          </ul>
+          <div class="btn">Find out more</div>
         </div>
       </div>
     </div>
