--- a/htmlpages/home.html
+++ b/htmlpages/home.html
@@ -28,21 +28,25 @@
   <div class='wrapper'>
     <h3 class="heading1">About</h3>
     <div class='text-wrapper'>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatem ratione itaque harum delectus repellat exercitationem accusamus ullam distinctio quam provident possimus deserunt saepe fugiat doloremque quisquam quo, deleniti fuga.</p>
+      <p>As a young adult I joined the Army where again, I represented the Army at rugby and  cricket, and played rugby in the national leagues. The different sports I played and the varying demands of being a soldier opened my eyes to a variety of training methods at an exceptionally high level. My desire to be the best pushed me to learn as much as I could and understand the many different ways I could achieve my goals...... To be fitter, stronger, faster. </p>
+      <br />
+      <a class='btn' href='/about-me'>Read more</a>
     </div>
   </div>
 </section>
 
 <!-- Third Block -->
 
-<section class='row mantra'>
-  <div class='wrapper'>
-    <h3 class='heading1'>Training Ethos</h3>
-    <div class='content-inner'>
-      <div class='img-wrapper'>
-        <img class='img-responsive' src='https://placehold.co/600x400' alt='image' />
-      </div>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus laboriosam praesentium exercitationem sint atque, cum beatae, ad cumque at expedita qui, veritatis dolorem molestiae. Illo, possimus nostrum. Culpa, molestiae explicabo.</p>
+<section class="row ethos">
+  <div class="image-block"></div>
+  <div class="content-block">
+    <div class="content-inner">
+        <h3 class="heading1">Training Ethos</h3>
+        <p>I am a firm believer in the power of the mind. What you set your mind on, is achievable through hard work. To reach goals we haven’t reached before, we must be prepared to put our bodies and minds in situations they haven’t been in before. We can’t expect to do the same routines and achieve better results. To that end I aim to push you and constantly challenge you until our goals become our lifestyle.</p>
+        <br/>
+        <p class='hashtag'>#MakeYourGoalYourLifestyle</p>
+        <br/>
+        <a class='btn' href='/why-train-with-me'><strong>Why train with me?</strong></a>
     </div>
   </div>
 </section>
