--- a/htmlpages/testimonials.html
+++ b/htmlpages/testimonials.html
@@ -4,8 +4,8 @@
   <div class='wrapper'>
     <div class='testimonial'>
       <img src='https://placehold.co/300'/>
-      <p class='description'>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam beatae, nulla quisquam molestiae dolorem doloremque dolore quas fuga mollitia dolor rem ducimus a voluptatem dolorum accusantium.</p>
-      <p class='author'>James</p>
+      <p class='description'>Mac was recommended to me by a friend, and at first I was sceptical towards how much he could help me as I wanted to get into the habit of enjoying the gym. This scepticism was swiftly curbed as Mac has not only helped me realise my aim in making the gym a pleasurable habit, but also helped me achieve my goals in regards to where I wanted to be physically and mentally. I cannot recommend this wonderful man enough! Infact, just in case you see this Mac... Thank you so much for all your support and your "you have a couple more in you" moments!</p>
+      <p class='author'>Geta</p>
     </div>
   </div>
 </section>
@@ -13,8 +13,45 @@
   <div class='wrapper'>
     <div class='testimonial'>
       <img src='https://placehold.co/300'/>
-      <p class='description'>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam beatae, nulla quisquam molestiae dolorem doloremque dolore quas fuga mollitia dolor rem ducimus a voluptatem dolorum accusantium.</p>
-      <p class='author'>Jane</p>
+      <p class='description'>When I first joined the  gym in August, I didn't know anything about sport or exercise in general. I decided to get help from a professional and I chose the best one. Mac helped me improve my posture. I went there with an injured ankle and a really weak left leg. Because of him and the exercises he made me do,I strengthen my leg muscles. And of course he helped me lose weight and get fit in quite a short time. Thank you very much and I totally recommend you to anyone who need a professional personal trainer. You're the best! </p>
+      <p class='author'>Claudia</p>
+    </div>
+  </div>
+</section>
+<section class='row testimonials'>
+  <div class='wrapper'>
+    <div class='testimonial'>
+      <img src='https://placehold.co/300'/>
+      <p class='description'>Mac is a great motivator. He pushes me to my limits but also makes the variety of exercises enjoyable. He has tailored clear training programmes that are already showing benefits.</p>
+      <p class='author'>Hannah</p>
+    </div>
+  </div>
+</section>
+<section class='row testimonials'>
+  <div class='wrapper'>
+    <div class='testimonial'>
+      <img src='https://placehold.co/300'/>
+      <p class='description'>I cannot recommend Mac highly enough! His workouts are challenging, engaging and varied and his approach is always supportive and encouraging. Mac creates a safe, non judgmental environment to work out in, you couldn't ask for a better personal trainer.</p>
+      <p class='author'>Sally</p>
+    </div>
+  </div>  
+</section>
+<section class="row testimonials">
+  <div class="wrapper">
+    <div class='testimonial'>
+      <img src='https://placehold.co/300'/>
+      <p class='description'>Mac's class was outstanding!</p>
+      <p class='description'>Every time I think I cope with his challenging class.... the next day I ache in places and with muscles that I didn’t know I had! He is genius on every level!</p>
+      <p class='author'>Nichola</p>
+    </div>
+  </div>
+</section>
+<section class="row testimonials">
+  <div class="wrapper">
+    <div class='testimonial'>
+      <img src='https://placehold.co/300'/>
+      <p class='description'>“What I learned from Mac is that feeling good, feeling strong, isn’t about bumpy biceps and throbbing thighs. It’s a core thing, rooted in your back and abdomen. Exercise well and you become aware of your muscles and how they feel as they stretch and contract. Mac’s insistence that I could do a little better every time was very effective. He expected me to try hard. I did. He’s good. Enjoy.</p>
+      <p class='author'>Bob Lea</p>
     </div>
   </div>
 </section>
